<resources>
    <string name="app_name">MessageApp</string>
    <string name="logo">Logo</string>
    <string name="welcome">Welcome</string>
    <string name="slogan">It is free and security</string>
    <string name="start">Start</string>
    <string name="email">Email</string>
    <string name="password">Passwork</string>
    <string name="login">Login</string>
    <string name="text1">Don&quot;t have an account?</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="text2">Already have an account?</string>
    <string name="reenterpassword">Re-enter Password</string>
    <string name="avatar">Avatar</string>
    <string name="textchat">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="textname">Unknown</string>
    <string name="texttime">12:24</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="textnonchat">Bạn chưa có tin nhắn nào</string>
    <string name="add_message">Thêm tin nhắn mới</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>